metadata/force-app/main/default/objects/CustomName_pGJGS__c/CustomName_pGJGS__c.object-meta.xml
<CustomObject>
    <description>Description_SOLMB</description>
    <label>CustomLabel_fZfPF</label>
    <nameField>
        <label>CustomLabel_fZfPF</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_fZfPFs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>