metadata/force-app/main/default/objects/CustomName_pGJGS__c/fields/CustomField_hRYZr__c.field-meta.xml
<CustomField>
    <fullName>CustomField_hRYZr__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldLCYmr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>